# cryptography.primitives

homomorphic/studies/paillier/: Makefile  paillier_div.c  paillier_mul.c  paillier_sub.c  paillier_sum.c
keys/: shaexe
signing/RSA/: rsa_sign.py
steganography/studies/DiscreteCosineTransformation/: 1d_DCT.c  2d_DCT.c  Makefile
zkp/studies/eliptic_curves/: Makefile  zkp_schnorr_protocol.c
zkp/studies/zk-SNARKs/rustc/bellman-circuit/: Cargo.toml
zkp/studies/zk-SNARKs/rustc/bellman-circuit/src/: main.rs
